--- a/css/style.css
+++ b/css/style.css
@@ -33,9 +33,10 @@ h2 {
 
 
 .box-img {
-    width: 300px;
-    height: 200px;
+    width: 312px;
+    height: 208px;
     color: white; 
+    font-size: 22px;
 }
 
 
